tests/brace-edge-cases-with-intentional-error.expected
[PawScript:parse ERROR] Parse error: Unclosed quote: missing closing "
  at line 12, column 1 in brace-edge-cases-with-intentional-error.paw

     11 | echo "Worse: {echo "unclosed quote will cause error}"
  >  12 | 
        | ^
