tests/brace-edge-cases-with-intentional-error.paw
# Edge cases for brace expressions
echo "Testing brace edge cases"

# This should work
echo "Result: {echo hello}"

# This should cause parse error in brace content
echo "Bad: {& echo leading operator in brace}"

# Unclosed quote inside brace
echo "Worse: {echo "unclosed quote will cause error}"
